{
  "version": 4,
  "terraform_version": "1.4.6",
  "serial": 1575,
  "lineage": "ddcda139-0480-4411-ada8-347943812de3",
  "resources": [
    {
      "module": "module.articles_rds_cluster",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "ig",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:132507767948:internet-gateway/igw-06bbc03f1eede7709",
            "id": "igw-06bbc03f1eede7709",
            "owner_id": "132507767948",
            "vpc_id": "vpc-0aeadc7122f3c5af9"
          },
          "dependencies": [
            "module.articles_rds_cluster.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.articles_rds_cluster",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-06bbc03f1eede7709",
            "id": "r-rtb-0f4579992bc03891d1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0f4579992bc03891d",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.articles_rds_cluster.aws_internet_gateway.ig",
            "module.articles_rds_cluster.aws_route_table.public",
            "module.articles_rds_cluster.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.articles_rds_cluster",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:132507767948:route-table/rtb-0f4579992bc03891d",
            "id": "rtb-0f4579992bc03891d",
            "owner_id": "132507767948",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-06bbc03f1eede7709",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0aeadc7122f3c5af9"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.articles_rds_cluster.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.articles_rds_cluster",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-006911e40570ea437",
            "route_table_id": "rtb-0f4579992bc03891d",
            "subnet_id": "subnet-089bf97707aebb94e"
          },
          "dependencies": [
            "module.articles_rds_cluster.aws_route_table.public",
            "module.articles_rds_cluster.aws_subnet.public_subnet",
            "module.articles_rds_cluster.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0155f5aa25da3b647",
            "route_table_id": "rtb-0f4579992bc03891d",
            "subnet_id": "subnet-03afaf7f3b4a22ef4"
          },
          "dependencies": [
            "module.articles_rds_cluster.aws_route_table.public",
            "module.articles_rds_cluster.aws_subnet.public_subnet",
            "module.articles_rds_cluster.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06a7977eacb5aafcc",
            "route_table_id": "rtb-0f4579992bc03891d",
            "subnet_id": "subnet-0ea294f301a7ffd35"
          },
          "dependencies": [
            "module.articles_rds_cluster.aws_route_table.public",
            "module.articles_rds_cluster.aws_subnet.public_subnet",
            "module.articles_rds_cluster.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.articles_rds_cluster",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:132507767948:security-group/sg-0c48e80094ced8172",
            "description": "Default security group to allow inbound/outbound from the VPC",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0c48e80094ced8172",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5432
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": true,
                "to_port": 0
              }
            ],
            "name": "hannahshobbyroom-default-sg",
            "name_prefix": "",
            "owner_id": "132507767948",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0aeadc7122f3c5af9"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.articles_rds_cluster.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.articles_rds_cluster",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:132507767948:subnet/subnet-089bf97707aebb94e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-089bf97707aebb94e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "132507767948",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-0aeadc7122f3c5af9"
          },
          "dependencies": [
            "module.articles_rds_cluster.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:132507767948:subnet/subnet-03afaf7f3b4a22ef4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.85.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03afaf7f3b4a22ef4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "132507767948",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-0aeadc7122f3c5af9"
          },
          "dependencies": [
            "module.articles_rds_cluster.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:132507767948:subnet/subnet-0ea294f301a7ffd35",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.170.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ea294f301a7ffd35",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "132507767948",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-0aeadc7122f3c5af9"
          },
          "dependencies": [
            "module.articles_rds_cluster.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.articles_rds_cluster",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:132507767948:vpc/vpc-0aeadc7122f3c5af9",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0193555bf6be7f0da",
            "default_route_table_id": "rtb-0e000be2b8a1da2f0",
            "default_security_group_id": "sg-0ab845857becc83dc",
            "dhcp_options_id": "dopt-d6c216ac",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0aeadc7122f3c5af9",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0e000be2b8a1da2f0",
            "owner_id": "132507767948"
          }
        }
      ]
    }
  ]
}